[gd_scene load_steps=4 format=2]

[ext_resource path="res://soruce/Main.gd" type="Script" id=1]
[ext_resource path="res://soruce/Text.tscn" type="PackedScene" id=2]
[ext_resource path="res://soruce/my_font.tres" type="DynamicFont" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_ground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" parent="." instance=ExtResource( 2 )]

[node name="yes" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.25
margin_top = -17.5
margin_right = -26.25
margin_bottom = 17.5
custom_fonts/font = ExtResource( 3 )
text = "yes"

[node name="no" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 27.0
margin_top = -20.0
margin_right = 112.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 3 )
text = "no"

[node name="restart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -50.0
margin_right = 68.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 3 )
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="yes" to="." method="_on_yes_pressed"]
[connection signal="button_down" from="no" to="." method="_on_no_button_down"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]

[editable path="Text"]
